--- a/static/index.html
+++ b/static/index.html
@@ -71,7 +71,7 @@
 
 <h2>GR DevDay November 2011</h2>
 
-<h2><a href="https://github.com/fletcherm/gr_dev_day_2011">github.com/fletcherm/gr_dev_day_2011</a></h2></div>
+<h2><a href="http://fletcherm.github.com/gr_dev_day_2011">fletcherm.github.com/gr_dev_day_2011</a></h2></div>
 </div><div class="slide" data-transition="none"><div class="content center" ref="one/01_slide/2">
 <h1>Matt Fletcher</h1>
 
@@ -409,7 +409,7 @@ end</code></pre>
 
 <h1>Matt Fletcher</h1>
 
-<h2><a href="https://github.com/fletcherm/gr_dev_day_2011">github.com/fletcherm/gr_dev_day_2011</a></h2>
+<h2><a href="http://fletcherm.github.com/gr_dev_day_2011">fletcherm.github.com/gr_dev_day_2011</a></h2>
 
 <p><img src="./file/one/AO-symbol-color.png" alt="AO"/></p></div>
 </div></div>
