--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
 
 <h2>GR DevDay November 2011</h2>
 
-<h2><a href="http://fletcherm.github.com/gr_dev_day_2011">fletcherm.github.com/gr_dev_day_2011</a></h2></div>
+<h2><a href="http://fletcherm.github.com/gr_dev_day_2011">fletcherm.github.com/gr_dev_day_2011</a></h2>
+
+<h2><a href="http://www.atomicobject.com/pages/Presentations">www.atomicobject.com/pages/Presentations</a></h2></div>
 </div><div class="slide" data-transition="none"><div class="content center" ref="one/01_slide/2">
 <h1>Matt Fletcher</h1>
 
@@ -407,9 +409,11 @@ end</code></pre>
 </div><div class="slide" data-transition="none"><div class="content center" ref="one/01_slide/72">
 <h1>Thanks!</h1>
 
-<h1>Matt Fletcher</h1>
+<h2>Matt Fletcher</h2>
 
 <h2><a href="http://fletcherm.github.com/gr_dev_day_2011">fletcherm.github.com/gr_dev_day_2011</a></h2>
+
+<h2><a href="http://www.atomicobject.com/pages/Presentations">www.atomicobject.com/pages/Presentations</a></h2>
 
 <p><img src="./file/one/AO-symbol-color.png" alt="AO"/></p></div>
 </div></div>
